--- a/notebooks/Prediction_analysis.ipynb
+++ b/notebooks/Prediction_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +34,18 @@
     "targets = torch.load('../hpc-tensors/Targes_1.pt')\n",
     "targets = torch.cat((targets,torch.load('../hpc-tensors/Targes_2.pt')),dim=0)\n",
     "targets = torch.cat((targets,torch.load('../hpc-tensors/Targes_3.pt')),dim=0)\n",
-    "targets = torch.cat((targets,torch.load('../hpc-tensors/Targes_4.pt')),dim=0)"
+    "targets = torch.cat((targets,torch.load('../hpc-tensors/Targes_4.pt')),dim=0)\n",
+    "\n",
+    "prepredictions = torch.load('../hpc-tensors/Best_postpredictions_1.pt')\n",
+    "prepredictions = torch.cat((prepredictions,torch.load('../hpc-tensors/Best_postpredictions_2.pt')),dim=0)\n",
+    "prepredictions = torch.cat((prepredictions,torch.load('../hpc-tensors/Best_postpredictions_3.pt')),dim=0)\n",
+    "prepredictions = torch.cat((prepredictions,torch.load('../hpc-tensors/Best_postpredictions_4.pt')),dim=0)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -47,13 +53,18 @@
      "output_type": "stream",
      "text": [
       "torch.Size([21504, 10])\n",
-      "torch.Size([21504, 10])\n"
+      "torch.Size([21504, 10])\n",
+      "torch.Size([10, 65792])\n",
+      "torch.Size([65792, 10])\n"
      ]
     }
    ],
    "source": [
     "print(prediction.size())\n",
-    "print(targets.size())"
+    "print(targets.size())\n",
+    "print(prepredictions.transpose(0,1).size())\n",
+    "print(prepredictions.size())\n",
+    "#prepredictions = prepredictions.transpose(0,1)"
    ]
   },
   {
@@ -64,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(1864)"
+       "tensor(6598)"
       ]
      },
      "execution_count": 22,
@@ -78,32 +89,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0595238095238093"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "65792/21504"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pred:\t6663\n",
+      "Pred:\t6598\n",
       "Target:\t7397\n",
-      "Pred:\t8878\n",
+      "Pred:\t8483\n",
       "Target:\t7662\n",
-      "Pred:\t2808\n",
+      "Pred:\t2689\n",
       "Target:\t2615\n",
-      "Pred:\t1841\n",
+      "Pred:\t1724\n",
       "Target:\t1942\n",
-      "Pred:\t2634\n",
+      "Pred:\t2535\n",
       "Target:\t3117\n",
-      "Pred:\t967\n",
+      "Pred:\t1161\n",
       "Target:\t1469\n",
-      "Pred:\t767\n",
+      "Pred:\t841\n",
       "Target:\t821\n",
-      "Pred:\t199\n",
+      "Pred:\t262\n",
       "Target:\t965\n",
-      "Pred:\t83\n",
+      "Pred:\t94\n",
       "Target:\t1120\n",
-      "Pred:\t4\n",
+      "Pred:\t0\n",
       "Target:\t211\n"
      ]
     }
@@ -116,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -133,17 +164,17 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 4862,  5856,  2315,  1347,  1820,   485,   623,   103,    25,\n",
-       "            3],\n",
-       "       [12306, 10820, 18396, 19068, 17573, 19553, 20539, 20443, 20326,\n",
-       "        21292],\n",
-       "       [ 1801,  3022,   493,   494,   814,   482,   144,    96,    58,\n",
-       "            1],\n",
-       "       [ 2535,  1806,   300,   595,  1297,   984,   198,   862,  1095,\n",
-       "          208]])"
+       "array([[ 4829,  5649,  2260,  1316,  1775,   573,   657,   118,    26,\n",
+       "            0],\n",
+       "       [12338, 11008, 18460, 19154, 17627, 19447, 20499, 20395, 20316,\n",
+       "        21293],\n",
+       "       [ 1769,  2834,   429,   408,   760,   588,   184,   144,    68,\n",
+       "            0],\n",
+       "       [ 2568,  2013,   355,   626,  1342,   896,   164,   847,  1094,\n",
+       "          211]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,17 +211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4862\t5856\t2315\t1347\t1820\t485\t623\t103\t25\t3\t\n",
-      "12306\t10820\t18396\t19068\t17573\t19553\t20539\t20443\t20326\t21292\t\n",
-      "1801\t3022\t493\t494\t814\t482\t144\t96\t58\t1\t\n",
-      "2535\t1806\t300\t595\t1297\t984\t198\t862\t1095\t208\t\n"
+      "4829\t5649\t2260\t1316\t1775\t573\t657\t118\t26\t0\t\n",
+      "12338\t11008\t18460\t19154\t17627\t19447\t20499\t20395\t20316\t21293\t\n",
+      "1769\t2834\t429\t408\t760\t588\t184\t144\t68\t0\t\n",
+      "2568\t2013\t355\t626\t1342\t896\t164\t847\t1094\t211\t\n"
      ]
     }
    ],
@@ -207,16 +238,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4862\t5856\t2315\t1347\t1820\t485\t623\t103\t25\t3\t\n",
-      "1801\t3022\t493\t494\t814\t482\t144\t96\t58\t1\t\n",
-      "2535\t1806\t300\t595\t1297\t984\t198\t862\t1095\t208\t\n"
+      "4829\t5649\t2260\t1316\t1775\t573\t657\t118\t26\t0\t\n",
+      "1769\t2834\t429\t408\t760\t588\t184\t144\t68\t0\t\n",
+      "2568\t2013\t355\t626\t1342\t896\t164\t847\t1094\t211\t\n"
      ]
     }
    ],
@@ -237,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,16 +308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 18166, 3336, 2, 0, 0, 0, 0, 0, 0]"
+       "[0, 18621, 2883, 0, 0, 0, 0, 0, 0, 0]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +337,7 @@
        "[0, 16418, 4495, 471, 102, 18, 0, 0, 0, 0]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -325,13 +356,42 @@
      "output_type": "stream",
      "text": [
       "Precision\n",
-      "0.730\t0.660\t0.824\t0.732\t0.691\t0.502\t0.812\t0.518\t0.301\t0.750\t\n",
+      "0.732\t0.666\t0.840\t0.763\t0.700\t0.494\t0.781\t0.450\t0.277\t"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\morte\\Anaconda3\\envs\\Master\\lib\\site-packages\\ipykernel_launcher.py:3: RuntimeWarning: invalid value encountered in long_scalars\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\t\n",
       "Recall\n",
-      "0.657\t0.764\t0.885\t0.694\t0.584\t0.330\t0.759\t0.107\t0.022\t0.014\t\n",
+      "0.653\t0.737\t0.864\t0.678\t0.569\t0.390\t0.800\t0.122\t0.023\t0.000\t\n",
       "Accuracy\n",
-      "0.798\t0.775\t0.963\t0.949\t0.902\t0.932\t0.984\t0.955\t0.946\t0.990\t\n",
+      "0.798\t0.775\t0.964\t0.952\t0.902\t0.931\t0.984\t0.954\t0.946\t0.990\t\n",
       "F1\n",
-      "0.692\t0.708\t0.854\t0.712\t0.633\t0.398\t0.785\t0.177\t0.042\t0.028\t"
+      "0.690\t0.700\t0.852\t0.718\t0.628\t0.436\t0.791\t0.192\t0.043\t"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\morte\\Anaconda3\\envs\\Master\\lib\\site-packages\\ipykernel_launcher.py:20: RuntimeWarning: invalid value encountered in long_scalars\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\t"
      ]
     }
    ],
@@ -362,16 +422,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 4862, 12306,  1801,  2535])"
+       "array([ 4829, 12338,  1769,  2568])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,6 +439,246 @@
    "source": [
     "confusionmatrix[:,0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.pyplot import plot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Due to output being wrong a number of things will be done to make the right dataset ready to be analysed\n",
+    "The_prediction_ = prepredictions[:21504,:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([21504, 10])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (65792) must match the size of tensor b (21504) at non-singleton dimension 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-36-6ac75b7627a1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m         \u001b[1;31m#True positive\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 33\u001b[1;33m         \u001b[0mTP_count\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mPredicted_with_threshold\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mtargets\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtype_as\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPredicted_with_threshold\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     34\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m         \u001b[1;31m#False positiv\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: The size of tensor a (65792) must match the size of tensor b (21504) at non-singleton dimension 0"
+     ]
+    }
+   ],
+   "source": [
+    "#make AOC graphs for all locations!!!\n",
+    "#numpy.random.uniform(low=0.0, high=1.0, size=None)¶\n",
+    "\n",
+    "\n",
+    "tensor_row_length = The_prediction_.size()[0]\n",
+    "print(The_prediction_.size())\n",
+    "\n",
+    "Highlevel_list\n",
+    "AOC = []\n",
+    "\n",
+    "def TPR(TP,FN):\n",
+    "    return TP/(TP+FN)\n",
+    "def Specificity(FP,TN):\n",
+    "    return TN/(TN+FP)\n",
+    "def FPR(FP,TN):\n",
+    "    return FP/(TN+FP)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    AOC.append([Highlevel_list[i]])\n",
+    "    x = []\n",
+    "    y = []\n",
+    "    for threshold in np.linspace(0,1,101):\n",
+    "\n",
+    "        Predicted_with_threshold = prepredictions[:,i] > threshold\n",
+    "        #print(Predicted_with_threshold.sum())\n",
+    "        Negativ_prediction_with_threshold = prepredictions[:,i] <= threshold\n",
+    "        #print(Negativ_prediction_with_threshold.sum())\n",
+    "        \n",
+    "        #print(targets[:,i].sum())\n",
+    "        #print((targets[:,i] == 0).sum())\n",
+    "        \n",
+    "        #True positive\n",
+    "        TP_count = (Predicted_with_threshold * targets[:,i].type_as(Predicted_with_threshold)).sum().item()\n",
+    "\n",
+    "        #False positiv\n",
+    "        FP_count = (Predicted_with_threshold * (targets[:,i] == 0).type_as(Predicted_with_threshold)).sum().item()\n",
+    "        \n",
+    "        #True negativ\n",
+    "        TN_count = (Negativ_prediction_with_threshold * targets[:,i].type_as(Negativ_prediction_with_threshold)).sum().item()\n",
+    "\n",
+    "        #False negativ\n",
+    "        FN_count = (Negativ_prediction_with_threshold * (targets[:,i] == 0).type_as(Negativ_prediction_with_threshold)).sum().item()\n",
+    "        \n",
+    "        AOC[i].append((FPR(FP_count,TN_count),TPR(TP_count,FN_count)))\n",
+    "        x.append(FPR(FP_count,TN_count))\n",
+    "        y.append(TPR(TP_count,FN_count))\n",
+    "        \n",
+    "    \n",
+    "    #print(AOC[i])\n",
+    "    #print(AOC[i][1:])\n",
+    "    plt(x,y, '.')\n",
+    "    x = [0,1]\n",
+    "    y = [0,1]\n",
+    "    plt(x,y)\n",
+    "    break\n",
+    "    #print(f'threshold = {threshold}')\n",
+    "    #print(((prepredictions[i,:] < threshold).sum().item())/tensor_row_length)\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tensor_row_length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(prepredictions[i,:] < threshold).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.transpose((prepredictions[i,:] < threshold),0,-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(prepredictions[i,:] < threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targets[:,0].size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(prepredictions[i,:] < threshold) * targets[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(prepredictions[0,:] < 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(prepredictions[0,:] < 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.uint8(targets[:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targets[:,0].type_as((prepredictions[0,:] < 0.5)) * (prepredictions[0,:] < 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targets[:,0].type_as((prepredictions[i,:] < threshold)) != 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -393,18 +693,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
