--- a/notebooks/Prediction_analysis.ipynb
+++ b/notebooks/Prediction_analysis.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import classification_report"
    ]
   },
   {
@@ -1073,32 +1074,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "multilabel-indicator format is not supported",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-95-26a215d9f45d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprecision_recall_curve\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtargets\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mprepredictions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Anaconda3\\envs\\Master\\lib\\site-packages\\sklearn\\metrics\\ranking.py\u001b[0m in \u001b[0;36mprecision_recall_curve\u001b[1;34m(y_true, probas_pred, pos_label, sample_weight)\u001b[0m\n\u001b[0;32m    522\u001b[0m     fps, tps, thresholds = _binary_clf_curve(y_true, probas_pred,\n\u001b[0;32m    523\u001b[0m                                              \u001b[0mpos_label\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mpos_label\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 524\u001b[1;33m                                              sample_weight=sample_weight)\n\u001b[0m\u001b[0;32m    525\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    526\u001b[0m     \u001b[0mprecision\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtps\u001b[0m \u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mtps\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\Master\\lib\\site-packages\\sklearn\\metrics\\ranking.py\u001b[0m in \u001b[0;36m_binary_clf_curve\u001b[1;34m(y_true, y_score, pos_label, sample_weight)\u001b[0m\n\u001b[0;32m    394\u001b[0m     if not (y_type == \"binary\" or\n\u001b[0;32m    395\u001b[0m             (y_type == \"multiclass\" and pos_label is not None)):\n\u001b[1;32m--> 396\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"{0} format is not supported\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_type\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    397\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    398\u001b[0m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_score\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: multilabel-indicator format is not supported"
-     ]
-    }
-   ],
-   "source": [
-    "precision_recall_curve(targets,prepredictions)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n# For each class\\nprecision = dict()\\nrecall = dict()\\naverage_precision = dict()\\nfor i in range(n_classes):\\n    precision[i], recall[i], _ = precision_recall_curve(Y_test[:, i],\\n                                                        y_score[:, i])\\n    average_precision[i] = average_precision_score(Y_test[:, i], y_score[:, i])\\n\\n# A \"micro-average\": quantifying score on all classes jointly\\nprecision[\"micro\"], recall[\"micro\"], _ = precision_recall_curve(Y_test.ravel(),\\n    y_score.ravel())\\naverage_precision[\"micro\"] = average_precision_score(Y_test, y_score,\\n                                                     average=\"micro\")\\nprint(\\'Average precision score, micro-averaged over all classes: {0:0.2f}\\'\\n      .format(average_precision[\"micro\"]))\\n'"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#https://scikit-learn.org/stable/auto_examples/model_selection/plot_precision_recall.html\n",
     "'''\n",
@@ -1123,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1174,10 +1170,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.73      0.65      0.69      7397\n",
+      "           1       0.66      0.77      0.71      7662\n",
+      "           2       0.83      0.88      0.85      2615\n",
+      "           3       0.74      0.70      0.72      1942\n",
+      "           4       0.71      0.57      0.63      3117\n",
+      "           5       0.48      0.37      0.42      1469\n",
+      "           6       0.81      0.76      0.79       821\n",
+      "           7       0.52      0.10      0.16       965\n",
+      "           8       0.21      0.02      0.04      1120\n",
+      "           9       0.00      0.00      0.00       211\n",
+      "\n",
+      "   micro avg       0.70      0.64      0.67     27319\n",
+      "   macro avg       0.57      0.48      0.50     27319\n",
+      "weighted avg       0.67      0.64      0.64     27319\n",
+      " samples avg       0.71      0.68      0.67     27319\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(targets,prediction))"
+   ]
   },
   {
    "cell_type": "code",
