--- a/notebooks/Prediction_analysis.ipynb
+++ b/notebooks/Prediction_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "        4.7393], dtype=torch.float64)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "3.0595238095238093"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "          211]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "10"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "[0, 18143, 3361, 0, 0, 0, 0, 0, 0, 0]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "[0, 16418, 4495, 471, 102, 18, 0, 0, 0, 0]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -586,37 +586,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 4825, 12355,  1752,  2572])"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Precision\n",
-    "0.660\t0.638\t0.677\t0.476\t0.513\t0.245\t0.300\t0.111\t0.102\t0.030\t\n",
-    "Recall\n",
-    "0.777\t0.809\t0.929\t0.801\t0.709\t0.776\t0.912\t0.734\t0.792\t0.735\t\n",
-    "Accuracy\n",
-    "0.786\t0.768\t0.938\t0.902\t0.860\t0.822\t0.915\t0.724\t0.624\t0.762\t\n",
-    "F1\n",
-    "0.714\t0.713\t0.783\t0.597\t0.595\t0.373\t0.451\t0.192\t0.180\t0.057\t\n",
-    "\n",
-    "\n",
-    "confusionmatrix[:,0]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +602,7 @@
        "torch.Size([21504, 10])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,18 +613,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pylustrator\n",
     "from sklearn.metrics import roc_auc_score, precision_recall_curve, average_precision_score\n",
-    "from sklearn.metrics import roc_curve, auc\n"
+    "from sklearn.metrics import roc_curve, auc, f1_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -805,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +800,7 @@
        " 0.007232291]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +820,7 @@
        "torch.Size([21504, 10])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +890,7 @@
        "        [0., 0., 1.,  ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +928,7 @@
        "           56]])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1067,7 @@
        "'\\n# For each class\\nprecision = dict()\\nrecall = dict()\\naverage_precision = dict()\\nfor i in range(n_classes):\\n    precision[i], recall[i], _ = precision_recall_curve(Y_test[:, i],\\n                                                        y_score[:, i])\\n    average_precision[i] = average_precision_score(Y_test[:, i], y_score[:, i])\\n\\n# A \"micro-average\": quantifying score on all classes jointly\\nprecision[\"micro\"], recall[\"micro\"], _ = precision_recall_curve(Y_test.ravel(),\\n    y_score.ravel())\\naverage_precision[\"micro\"] = average_precision_score(Y_test, y_score,\\n                                                     average=\"micro\")\\nprint(\\'Average precision score, micro-averaged over all classes: {0:0.2f}\\'\\n      .format(average_precision[\"micro\"]))\\n'"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1170,9 +1147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\morte\\Anaconda3\\envs\\Master\\lib\\site-packages\\sklearn\\metrics\\classification.py:1437: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1208,6 +1193,129 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[4.6317e-01, 7.0194e-01, 3.5376e-03,  ..., 6.6159e-02, 8.6449e-02,\n",
+       "         2.3258e-03],\n",
+       "        [1.6685e-01, 8.2820e-01, 7.0374e-03,  ..., 2.1822e-01, 9.4196e-02,\n",
+       "         3.0286e-05],\n",
+       "        [1.0480e-01, 8.2496e-01, 6.3242e-03,  ..., 2.0515e-01, 7.4765e-02,\n",
+       "         1.2892e-07],\n",
+       "        ...,\n",
+       "        [6.4046e-01, 3.9636e-01, 6.2294e-03,  ..., 1.8589e-02, 5.1601e-02,\n",
+       "         1.0760e-02],\n",
+       "        [1.5586e-01, 1.0998e-01, 1.2961e-02,  ..., 2.5984e-01, 2.1526e-02,\n",
+       "         1.7091e-05],\n",
+       "        [1.0863e-01, 1.2351e-02, 9.9786e-01,  ..., 4.5914e-05, 4.1330e-06,\n",
+       "         3.2062e-18]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prepredictions"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "for each location\n",
+    "    arange (start, stop, step)\n",
+    "    make a graph of the F1 score over a range of thresholds\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([21504])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "targets[:,0].size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "best_thresholds = []\n",
+    "for i in range(10):\n",
+    "    prediction_with_threshold = np.empty(prepredictions.size()[0])\n",
+    "    #print(prediction_with_threshold.shape)\n",
+    "    y = []\n",
+    "    top_point_y = 0\n",
+    "    for threshold in np.arange(0,1,0.01):\n",
+    "        prediction_with_threshold = prepredictions[:,i] > threshold\n",
+    "        #print(prediction_with_threshold.size())\n",
+    "        new_y = f1_score(targets[:,i],prediction_with_threshold)\n",
+    "        y.append(new_y)\n",
+    "        if new_y > top_point_y:\n",
+    "            top_point_x = threshold\n",
+    "            top_point_y = new_y\n",
+    "        \n",
+    "    best_thresholds.append(threshold)\n",
+    "    \n",
+    "    plt.title(Highlevel_list[i])\n",
+    "    plt.plot(np.arange(0,1,0.01),y)\n",
+    "    plt.plot(top_point_x, top_point_y, 'X')\n",
+    "    plt.figure(1).axes[0].set_xlabel(\"Threshold\")\n",
+    "    plt.figure(1).axes[0].set_ylabel(\"F1 Score\")\n",
+    "    plt.savefig(f'./figue/{Highlevel_list[i]}_F1_Threshold.png')\n",
+    "    plt.clf()\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./figue/Nucleus_F1_Threshold.png\">\n",
+    "<img src=\"./figue/Cytoplasm_F1_Threshold.png\">\n",
+    "<img src=\"./figue/Extracellular_F1_Threshold.png\">\n",
+    "<img src=\"./figue/Mitochondrion_F1_Threshold.png\">\n",
+    "<img src=\"./figue/Cell membrane_F1_Threshold.png\">\n",
+    "<img src=\"./figue/Endoplasmic reticulum_F1_Threshold.png\">\n",
+    "<img src=\"./figue/Plastid_F1_Threshold.png\">\n",
+    "<img src=\"./figue/Golgi apparatus_F1_Threshold.png\">\n",
+    "<img src=\"./figue/Lysosome_Vacuole_F1_Threshold.png\">\n",
+    "<img src=\"./figue/Peroxisome_F1_Threshold.png\">"
+   ]
   },
   {
    "cell_type": "code",
