--- a/notebooks/Prediction_analysis.ipynb
+++ b/notebooks/Prediction_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,30 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.1352, 0.1305, 0.3824, 0.5149, 0.3208, 0.6807, 1.2180, 1.0363, 0.8929,\n",
-       "        4.7393], dtype=torch.float64)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "torch.tensor([4,2],dtype=torch.float64)\n",
     "tpl = 1000\n",
-    "torch.tensor([tpl/7397, tpl/7662, tpl/2615, tpl/1942, tpl/3117, tpl/1469, tpl/821, tpl/965, tpl/1120, tpl/211],dtype=torch.float64)\n"
+    "torch.tensor([tpl/7397, tpl/7662, tpl/2615, tpl/1942, tpl/3117, tpl/1469, tpl/821, tpl/965, tpl/1120, tpl/211],dtype=torch.float64)\n",
+    "Highlevel_list = ['Nucleus','Cytoplasm','Extracellular','Mitochondrion','Cell membrane','Endoplasmic reticulum','Plastid','Golgi apparatus','Lysosome/Vacuole','Peroxisome']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +147,7 @@
        "3.0595238095238093"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,31 +158,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Nucleus\n",
       "Pred:\t6577\n",
       "Target:\t7397\n",
+      "Cytoplasm\n",
       "Pred:\t8996\n",
       "Target:\t7662\n",
+      "Extracellular\n",
       "Pred:\t2779\n",
       "Target:\t2615\n",
+      "Mitochondrion\n",
       "Pred:\t1843\n",
       "Target:\t1942\n",
+      "Cell membrane\n",
       "Pred:\t2485\n",
       "Target:\t3117\n",
+      "Endoplasmic reticulum\n",
       "Pred:\t1131\n",
       "Target:\t1469\n",
+      "Plastid\n",
       "Pred:\t769\n",
       "Target:\t821\n",
+      "Golgi apparatus\n",
       "Pred:\t176\n",
       "Target:\t965\n",
+      "Lysosome/Vacuole\n",
       "Pred:\t109\n",
       "Target:\t1120\n",
+      "Peroxisome\n",
       "Pred:\t0\n",
       "Target:\t211\n"
      ]
@@ -201,13 +200,14 @@
    ],
    "source": [
     "for i in range(prediction.size()[1]):\n",
+    "    print(Highlevel_list[i])\n",
     "    print(f'Pred:\\t{prediction[:,i:i+1].sum()}')\n",
     "    print(f'Target:\\t{targets[:,i:i+1].sum()}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -218,25 +218,12 @@
       " [0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 0 0 0 0]]\n",
-      "True\n"
+      "True\n",
+      "[[ 4825  5896  2293  1357  1767   542   626    92    23     0]\n",
+      " [12355 10742 18403 19076 17669 19446 20540 20455 20298 21293]\n",
+      " [ 1752  3100   486   486   718   589   143    84    86     0]\n",
+      " [ 2572  1766   322   585  1350   927   195   873  1097   211]]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 4825,  5896,  2293,  1357,  1767,   542,   626,    92,    23,\n",
-       "            0],\n",
-       "       [12355, 10742, 18403, 19076, 17669, 19446, 20540, 20455, 20298,\n",
-       "        21293],\n",
-       "       [ 1752,  3100,   486,   486,   718,   589,   143,    84,    86,\n",
-       "            0],\n",
-       "       [ 2572,  1766,   322,   585,  1350,   927,   195,   873,  1097,\n",
-       "          211]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -266,12 +253,12 @@
     "        elif prediction[j,i] == 0 and targets[j,i] == 1:\n",
     "            confusionmatrix[3,i] += 1\n",
     "\n",
-    "confusionmatrix"
+    "print(confusionmatrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 79,
    "metadata": {
     "scrolled": true
    },
@@ -300,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +301,7 @@
     }
    ],
    "source": [
-    "Highlevel_list = ['Nucleus','Cytoplasm','Extracellular','Mitochondrion','Cell membrane','Endoplasmic reticulum','Plastid','Golgi apparatus','Lysosome/Vacuole','Peroxisome']\n",
+    "\n",
     "    \n",
     "#for j in range(len(Highlevel_list)):\n",
     "#    print(Highlevel_list[j],end='\\t')\n",
@@ -330,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +326,7 @@
        "10"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +468,7 @@
        "[0, 18143, 3361, 0, 0, 0, 0, 0, 0, 0]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +488,7 @@
        "[0, 16418, 4495, 471, 102, 18, 0, 0, 0, 0]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +589,7 @@
        "torch.Size([21504, 10])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 91,
    "metadata": {
     "scrolled": false
    },
@@ -782,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +787,7 @@
        " 0.007232291]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +807,7 @@
        "torch.Size([21504, 10])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +877,7 @@
        "        [0., 0., 1.,  ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +915,7 @@
        "           56]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1054,7 @@
        "'\\n# For each class\\nprecision = dict()\\nrecall = dict()\\naverage_precision = dict()\\nfor i in range(n_classes):\\n    precision[i], recall[i], _ = precision_recall_curve(Y_test[:, i],\\n                                                        y_score[:, i])\\n    average_precision[i] = average_precision_score(Y_test[:, i], y_score[:, i])\\n\\n# A \"micro-average\": quantifying score on all classes jointly\\nprecision[\"micro\"], recall[\"micro\"], _ = precision_recall_curve(Y_test.ravel(),\\n    y_score.ravel())\\naverage_precision[\"micro\"] = average_precision_score(Y_test, y_score,\\n                                                     average=\"micro\")\\nprint(\\'Average precision score, micro-averaged over all classes: {0:0.2f}\\'\\n      .format(average_precision[\"micro\"]))\\n'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1147,17 +1134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\morte\\Anaconda3\\envs\\Master\\lib\\site-packages\\sklearn\\metrics\\classification.py:1437: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1196,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1196,7 @@
        "         3.2062e-18]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1226,7 @@
        "torch.Size([21504])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1274,7 @@
     "    plt.plot(top_point_x, top_point_y, 'X')\n",
     "    plt.figure(1).axes[0].set_xlabel(\"Threshold\")\n",
     "    plt.figure(1).axes[0].set_ylabel(\"F1 Score\")\n",
-    "    plt.savefig(f'./figue/{Highlevel_list[i]}_F1_Threshold.png')\n",
+    "    plt.savefig(f'./figue/1_{Highlevel_list[i]}_F1_Threshold.png')\n",
     "    plt.clf()\n",
     "    \n",
     "    "
@@ -1316,6 +1295,41 @@
     "<img src=\"./figue/Lysosome_Vacuole_F1_Threshold.png\">\n",
     "<img src=\"./figue/Peroxisome_F1_Threshold.png\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
